typescript/checker/tests/conformance/interfaces/interfaceDeclarations/asiPreventsParsingAsInterface05.ts.stderr
error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/conformance/interfaces/interfaceDeclarations/asiPreventsParsingAsInterface05.ts:3:5
  |
3 | var interface: number;
  |     ^^^^^^^^^

error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
  --> $DIR/tests/conformance/interfaces/interfaceDeclarations/asiPreventsParsingAsInterface05.ts:10:1
   |
10 | interface   // This should be the identifier 'interface'
   | ^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            432,
        ),
        hi: BytePos(
            433,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/interfaces/interfaceDeclarations/asiPreventsParsingAsInterface05.ts:11:1
   |
11 | I           // This should be the identifier 'I'
   | ^

